--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
   <!-- tailwindcss cdn link -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <!-- Vanilla CSS -->
+  <style>
+    .light-black {
+      color: rgba(0, 0, 0, 0.5);
+    }
+  </style>
 </head>
 
 <body class="bg-[#F5F8FF]">
@@ -36,6 +42,26 @@
   </section>
   <!-- navbar section  end-->
 
+  <!--  Banner section start -->
+  <section class="my-4 md:my-16 ">
+    <div
+      class="max-w-[1140px] px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0 mx-auto flex flex-col-reverse   gap-3 md:flex-row items-center md:py-16">
+      <div class="md:w-1/2 px-3">
+        <h1 class="lg:text-6xl md:text-4xl text-2xl mb-3 font-bold"><span class="text-black">ALWAYS</span><span
+            class="text-orange-600">FRESH</span>
+          <br><span class="text-orange-600">FLOWERS</span>
+        </h1>
+        <p class="light-black text-sm font-bold md:text-lg lg:text-2xl">Indulge your senses with the beauty and
+          fragrance of our fresh flower shop.
+          From classic roses to exotic blooms, we
+          offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+      </div>
+      <div class="md:w-1/2">
+        <img src="./assets/hero-flower.png" alt="">
+      </div>
+    </div>
+  </section>
+  <!--  Banner section end -->
 
 </body>
 
