--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   <!-- navbar section  end-->
 
   <!--  Banner section start -->
-  <section class="my-4 md:my-16 ">
+  <section class="my-4 md:mt-16 mb-12 lg:my-16">
     <div
-      class="max-w-[1140px] px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0 mx-auto flex flex-col-reverse   gap-3 md:flex-row items-center md:py-16">
+      class="max-w-[1140px] px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0 mx-auto flex flex-col-reverse   gap-3 md:flex-row items-center">
       <div class="md:w-1/2 px-3">
         <h1 class="lg:text-6xl md:text-4xl text-2xl mb-3 font-bold"><span class="text-black">ALWAYS</span><span
             class="text-orange-600">FRESH</span>
           <br><span class="text-orange-600">FLOWERS</span>
         </h1>
-        <p class="light-black text-sm font-bold md:text-lg lg:text-2xl">Indulge your senses with the beauty and
+        <p class="light-black text-sm font-normal md:text-lg lg:text-2xl">Indulge your senses with the beauty and
           fragrance of our fresh flower shop.
           From classic roses to exotic blooms, we
           offer a wide variety of fresh flowers that are perfect for any occasion.</p>
@@ -62,6 +62,171 @@
     </div>
   </section>
   <!--  Banner section end -->
+
+  <!-- Our Plants Section start -->
+  <section>
+    <div class="text-center mb-8 lg:mb-10">
+      <h3 class="lg:text-5xl font-bold md:text-3xl text-2xl mb-4"><span class="text-orange-600">Our</span> <span
+          class="text-black">Plants</span></h3>
+      <p class="light-black text-sm font-normal md:text-lg lg:text-2xl">Indulge your senses with the beauty and
+        fragrance of our fresh flower shop. <br> From classic roses to exotic blooms, we
+        offer a wide variety of fresh.</p>
+    </div>
+
+    <div class="max-w-[1140px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
+      <div class="grid justify-items-center grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:gap-2 lg:gap-3">
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+        <div class=" text-center w-full">
+          <img src="./assets/sample-flower-image.png" alt="" class="w-full">
+          <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
+          <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
+          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Our Plants Section End -->
+
+  <!-- Plants Lover Section start -->
+  <section class="mt-36">
+    <div class="max-w-[1140px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
+      <div class="flex flex-col md:flex-row items-center md:gap-12">
+        <div class="w-full md:w-1/2"><img src="./assets/flower-store.png" alt=""></div>
+        <div class="w-full md:w-1/2">
+          <div class="flex md:block text-3xl font-bold md:text-5xl my-3">
+            <h3>Flower & Plants</h3>
+            <h3>Lover</h3>
+          </div>
+          <ul class="list-disc pl-4 text-sm md:text-xl font-normal light-black">
+            <li class="my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+              roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</li>
+            <li class="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+              to exotic
+              blooms, we
+              offer a wide variety of fresh.</li>
+            <li class="my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+              roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <!-- Plants Lover Section end -->
+
+  <!-- Latest Deal Section start -->
+  <section class="my-10 md:mt-36 md:mb-16">
+    <!-- Latest Deals -->
+    <div class="text-center mb-8 lg:mb-10">
+      <h3 class="lg:text-5xl font-bold md:text-3xl text-2xl mb-4"><span class="text-orange-600">Latest</span> <span
+          class="text-black">Deals</span></h3>
+      <p class="light-black text-sm font-normal md:text-lg lg:text-2xl">Indulge your senses with the beauty and
+        fragrance of our fresh flower shop.From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
+      </p>
+    </div>
+    <!-- Latest Deals -->
+    <div class="max-w-[1140px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
+
+      <div class="flex flex-col sm:flex-row gap-4 bg-gray-100 p-4 rounded-lg">
+        <!-- Left column -->
+        <div class="flex flex-col md:justify-center gap-4 w-full sm:w-1/3">
+          <!-- Bloom Plant -->
+          <div class="relative h-[180px] rounded-lg overflow-hidden">
+            <img src="./assets/deal-bloom.png" alt="Bloom Plant" class="w-full h-full object-cover" />
+            <div class="absolute inset-0 bg-black/40"></div>
+            <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-sm font-semibold">
+              <span>60% Off | Bloom Plant</span>
+              <button class="mt-1 underline">Shop Now</button>
+            </div>
+          </div>
+
+          <!-- Ana Plant -->
+          <div class="relative h-[180px] rounded-lg overflow-hidden">
+            <img src="./assets/deal-ana.png" alt="Ana Plant" class="w-full h-full object-cover" />
+            <div class="absolute inset-0 bg-black/40"></div>
+            <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-sm font-semibold">
+              <span>30% Off | Ana Plant</span>
+              <button class="mt-1 underline">Shop Now</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right column -->
+        <div class="relative h-96 w-full sm:w-2/3 rounded-lg overflow-hidden">
+          <img src="./assets/deal-zabo.png" alt="Zabo Plant" class="w-full h-full object-cover" />
+          <div class="absolute inset-0 bg-black/40"></div>
+          <div class="absolute inset-0 flex flex-col justify-center items-center text-white">
+            <h2 class="text-2xl font-bold">25% Off | Zabo Plant</h2>
+            <button class="mt-2 underline">Shop Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <!-- Latest Deal Section end -->
+
+  <!-- Join Section start -->
+  <section class="mb-16">
+    <div class="max-w-[1440px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
+      <div class="flex justify-center items-center bg-[url(./assets/news-letter-bg.png)] bg-cover bg-center h-[533px]">
+        <div class="text-center">
+          <h3 class="text-3xl md:text-5xl font-bold text-white my-6">Join the colorful Bunch</h3>
+          <div class="flex justify-center items-center">
+            <input type="text" placeholder="Enter your email address"
+              class="w-1/2 lg:w-[540px] md:w2/3  bg-white text-gray-500 px-4 h-12 border-none">
+            <a href="#" class="bg-orange-600 px-10 py-3">Subscribe</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Join Section end -->
 
 </body>
 
