--- a/index.html
+++ b/index.html
@@ -228,6 +228,45 @@
   </section>
   <!-- Join Section end -->
 
+  <!-- footer section start -->
+  <footer class="my-16">
+    <div class="max-w-[1440px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
+      <div class="flex flex-col gap-5 md:flex-row pl-4  md:justify-around ">
+        <div>
+          <a href="#"><img src="./assets/logo.png" alt=""></a>
+          <h4 class="light-black text-sm font-normal md:text-lg lg:text-2xl">Indulge your senses with the <br> beauty
+            and fragrance of our fresh <br> flower shop.</h4>
+        </div>
+        <div>
+          <ul class="list-none flex flex-col gap-4 text-[#8987A1] font-medium">
+            <li><a href="#" active>Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul class="list-none flex flex-col gap-4 text-[#8987A1] font-medium">
+            <li><a href="#" active>Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="flex gap-5">
+          <a href="#"><img src="./assets/icon-linkedin.png" alt=""></a>
+          <a href="#"><img src="./assets/icon-twitter.png" alt=""></a>
+          <a href="#"><img src="./assets/icon-facebook.png" alt=""></a>
+          <a href="#"><img src="./assets/icon-youtube.png" alt=""></a>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <!-- footer section end -->
+
 </body>
 
 </html>
