--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
   <!-- navbar section  end-->
 
   <!--  Banner section start -->
-  <section class="my-4 md:mt-16 mb-12 lg:my-16">
-    <div
-      class="max-w-[1140px] px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0 mx-auto flex flex-col-reverse   gap-3 md:flex-row items-center">
+  <section class="my-4 md:mt-16 mb-24 lg:my-16">
+    <div class="max-w-[1140px] mx-auto flex flex-col-reverse   gap-3 md:flex-row items-center">
       <div class="md:w-1/2 px-3">
         <h1 class="lg:text-6xl md:text-4xl text-2xl mb-3 font-bold"><span class="text-black">ALWAYS</span><span
             class="text-orange-600">FRESH</span>
@@ -74,67 +73,71 @@
     </div>
 
     <div class="max-w-[1140px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
-      <div class="grid justify-items-center grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:gap-2 lg:gap-3">
+      <div class="grid justify-items-center gap-2 grid-cols-2 lg:grid-cols-4 md:gap-2 lg:gap-3">
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
         <div class=" text-center w-full">
           <img src="./assets/sample-flower-image.png" alt="" class="w-full">
           <h3 class="text-xl font-medium mt-7">Lily Blossom</h3>
           <h5 class="text-xl font-bold mt-2 mb-7">20 USD</h5>
-          <button class="bg-orange-600 w-full py-3">Add To Cart</button>
+          <button class="bg-orange-600 hover:bg-orange-400 cursor-pointer w-full py-3">Add To Cart</button>
         </div>
       </div>
     </div>
   </section>
   <!--Our Plants Section End -->
 
-  <!-- Plants Lover Section start -->
-  <section class="mt-36">
+  <!--Flower & Plants Lover Section start -->
+  <section class="md:mt-36 mt-16">
     <div class="max-w-[1140px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
       <div class="flex flex-col md:flex-row items-center md:gap-12">
-        <div class="w-full md:w-1/2"><img src="./assets/flower-store.png" alt=""></div>
+        <div class="w-full md:w-1/2 relative">
+          <img src="./assets/trusted-badge.png" alt=""
+            class="absolute hidden md:block md:-top-[102px] md:left-[214px] lg:-top-[100px] lg:left-[420px] w-52 z-10">
+          <img src="./assets/flower-store.png" alt="">
+        </div>
         <div class="w-full md:w-1/2">
-          <div class="flex md:block text-3xl font-bold md:text-5xl my-3">
+          <div class="flex md:block text-3xl font-bold md:text-4xl lg::text-5xl my-3">
             <h3>Flower & Plants</h3>
             <h3>Lover</h3>
           </div>
@@ -157,10 +160,10 @@
     </div>
 
   </section>
-  <!-- Plants Lover Section end -->
+  <!--Flower & Plants Lover Section end -->
 
   <!-- Latest Deal Section start -->
-  <section class="my-10 md:mt-36 md:mb-16">
+  <section class="mb-10 mt-24  md:mt-36 md:mb-16">
     <!-- Latest Deals -->
     <div class="text-center mb-8 lg:mb-10">
       <h3 class="lg:text-5xl font-bold md:text-3xl text-2xl mb-4"><span class="text-orange-600">Latest</span> <span
@@ -171,7 +174,6 @@
     </div>
     <!-- Latest Deals -->
     <div class="max-w-[1140px] mx-auto px-2 sm:px-4 md:px-4 lg:px-0 xl:px-0">
-
       <div class="flex flex-col sm:flex-row gap-4 bg-gray-100 p-4 rounded-lg">
         <!-- Left column -->
         <div class="flex flex-col md:justify-center gap-4 w-full sm:w-1/3">
@@ -181,7 +183,7 @@
             <div class="absolute inset-0 bg-black/40"></div>
             <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-sm font-semibold">
               <span>60% Off | Bloom Plant</span>
-              <button class="mt-1 underline">Shop Now</button>
+              <button class="mt-1 underline cursor-pointer">Shop Now</button>
             </div>
           </div>
 
@@ -191,7 +193,7 @@
             <div class="absolute inset-0 bg-black/40"></div>
             <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-sm font-semibold">
               <span>30% Off | Ana Plant</span>
-              <button class="mt-1 underline">Shop Now</button>
+              <button class="mt-1 underline cursor-pointer">Shop Now</button>
             </div>
           </div>
         </div>
@@ -202,7 +204,7 @@
           <div class="absolute inset-0 bg-black/40"></div>
           <div class="absolute inset-0 flex flex-col justify-center items-center text-white">
             <h2 class="text-2xl font-bold">25% Off | Zabo Plant</h2>
-            <button class="mt-2 underline">Shop Now</button>
+            <button class="mt-2 underline cursor-pointer">Shop Now</button>
           </div>
         </div>
       </div>
@@ -220,7 +222,7 @@
           <div class="flex justify-center items-center">
             <input type="text" placeholder="Enter your email address"
               class="w-1/2 lg:w-[540px] md:w2/3  bg-white text-gray-500 px-4 h-12 border-none">
-            <a href="#" class="bg-orange-600 px-10 py-3">Subscribe</a>
+            <a href="#" class="bg-orange-600 hover:bg-orange-400 cursor-pointer px-10 py-3">Subscribe</a>
           </div>
         </div>
       </div>
@@ -266,7 +268,6 @@
 
   </footer>
   <!-- footer section end -->
-
 </body>
 
 </html>
